5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4159/executions/1723_2503.log
== TEST (2019-05-15 22:39:34) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n>k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
print(round(som, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:39:44) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n>k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
print(round(som, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:40:09) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n>k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
print(round(som, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    soma = soma + (4/(2*i + 1))((-1)*i)
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:40:25) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n<k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
print(round(som, 8))
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:40:31) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n<k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
print(round(som, 8))
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:40:37) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n<k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
print(round(som, 8))
-- OUTPUT:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:41:21) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(nk):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
	k=k+1
print(round(som, 8))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while(nk):
NameError: name 'nk' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:41:43) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n>k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
	k=k+1
print(round(som, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:41:49) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n>k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
	k=k+1
print(round(som, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 22:41:55) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n>k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
	k=k+1
print(round(som, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 22:42:07) 
-- CODE:
n = float(input("numero: "))
k = 1
som = 4/1
s = -1
v = 3
while(n>k):
	som = som +(s*(4/v))
	v = v+2
	s = s*(-1)
	k=k+1
print(round(som, 8))
-- EXECUTION TIME:
0.197371
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
